fixed span pre color dark mode

--- a/style.css
+++ b/style.css
@@ -575,6 +575,7 @@ code,
 p code,
 pre code,
 li code,
+span pre,
 .wp-block-code,
 .wp-block-preformatted {
   font-family: "Menlo", "Inconsolata", "Consolas", "Roboto Mono", "Ubuntu Mono", "Liberation Mono", "Courier New", monospace;
